# oxigraph-nova

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: Cargo.toml
benches/benches/: bsbm_large.rs  wikidata_slice.rs
benches/examples/: memory_report.rs
benches/src/: lib.rs
crates/bindings/nova-js/: Cargo.toml  README.md  build_package.py  package.json  vitest.config.mts
crates/bindings/nova-js/src/: store.rs
crates/bindings/nova-python/: Cargo.toml  README.md  pyproject.toml
crates/bindings/nova-python/src/: model.rs  store.rs
crates/bindings/nova-python/tests/: test_store.py
crates/core/nova-core/: Cargo.toml
crates/core/nova-core/src/: dict.rs  dict_block_cache.rs  dict_compact.rs  engine.rs  lib.rs  store.rs  text_search.rs
crates/core/nova-cypher/: Cargo.toml
crates/core/nova-cypher/src/: lower.rs
crates/core/nova-cypher/tests/: it_lower.rs
crates/core/nova-fulltext/src/: lib.rs
crates/core/nova-query/: Cargo.toml
crates/core/nova-query/src/: dataset.rs  evaluator.rs  extensions.rs  lftj.rs  lib.rs  path.rs  path_timing.rs  select_vars.rs  solution.rs  update.rs
crates/core/nova-query/src/shapes/: directed_triangle.rs  k_chain.rs  mod.rs  sp_expansion.rs  star.rs  two_hop.rs  wedge.rs
crates/core/nova-reasoning/: Cargo.toml
crates/core/nova-reasoning/src/: engine.rs  fixpoint.rs  join.rs  reasoning_dataset.rs  reasoning_state.rs  rule.rs  same_as.rs  sorted_vec_trie.rs  store_source.rs
crates/core/nova-reasoning/tests/: multi_rule_over_ringstore.rs  oracle_differential.rs  transitivity_spike.rs
crates/core/nova-shacl/: Cargo.toml
crates/core/nova-shacl/src/: native.rs  report.rs  shape.rs
crates/core/nova-storage/: Cargo.toml
crates/core/nova-storage/src/: dict_lz4.rs  dict_snapshot.rs  lib.rs  manifest.rs  wal.rs
crates/engines/nova-engine-louds/: Cargo.toml
crates/engines/nova-engine-louds/src/: cltj.rs  delta.rs  fulltext.rs  lib.rs  louds.rs  prepared_shape.rs  ring.rs  snapshot.rs  store.rs
crates/engines/nova-engine-memory/: Cargo.toml
crates/engines/nova-engine-ring/: Cargo.toml
crates/engines/nova-engine-ring/src/: cyclic.rs  facade.rs  huff_cp.rs  image.rs  lib.rs  mapped_hqwt.rs  mapped_qwt.rs  mapped_ring.rs  prepared_plan_cache.rs  product_path.rs  ring_nav.rs  ring_store.rs  scan.rs
crates/engines/nova-engine-rocksdb/: Cargo.toml
crates/engines/nova-engine-rocksdb/src/: lib.rs  store.rs
crates/nova-cli/: Cargo.toml
crates/nova-cli/src/: cli.rs  load.rs  main.rs
crates/nova-cli/tests/: cli.rs
crates/nova-core/: Cargo.toml
crates/nova-core/src/: dict.rs  dict_block_cache.rs  dict_compact.rs  error.rs  lib.rs  store.rs  text_search.rs  trie.rs
crates/nova-cypher/: Cargo.toml
crates/nova-cypher/src/: ast.rs  lexer.rs  lib.rs  lower.rs  parser.rs
crates/nova-cypher/tests/: it_lower.rs
crates/nova-fulltext/: Cargo.toml
crates/nova-fulltext/src/: lib.rs
crates/nova-js/: Cargo.toml  build_package.py  package-lock.json
crates/nova-js/src/: io.rs  lib.rs  model.rs  store.rs
crates/nova-js/test/: store.test.ts
crates/nova-mcp/: Cargo.toml
crates/nova-mcp/src/: lib.rs
crates/nova-python/: Cargo.toml  README.md  pyproject.toml
crates/nova-python/src/: io.rs  lib.rs  model.rs  sparql.rs  store.rs
crates/nova-python/tests/: test_store.py
crates/nova-query/: Cargo.toml
crates/nova-query/src/: dataset.rs  evaluator.rs  extensions.rs  lftj.rs  lib.rs  options.rs  path.rs  select_vars.rs  service.rs  solution.rs  update.rs
crates/nova-query/src/shapes/: k_chain.rs  mod.rs  sp_expansion.rs  star.rs  two_hop.rs  wedge.rs
crates/nova-reasoning/: Cargo.toml
crates/nova-reasoning/src/: engine.rs  fixpoint.rs  join.rs  lib.rs  reasoning_dataset.rs  reasoning_state.rs  rule.rs  sorted_vec_trie.rs  store_source.rs
crates/nova-reasoning/tests/: multi_rule_over_ringstore.rs  oracle_differential.rs  transitivity_spike.rs
crates/nova-server/: Cargo.toml
crates/nova-server/src/: lib.rs  reasoning_state.rs  service_description.rs
crates/nova-server/tests/: crash_recovery.rs  isolation.rs  reasoning_http.rs
crates/nova-shacl/: Cargo.toml
crates/nova-shacl/src/: lib.rs  native.rs  validator.rs
crates/nova-storage-common/: Cargo.toml
crates/nova-storage-common/src/: dict_snapshot.rs  lib.rs  manifest.rs  wal.rs
crates/nova-storage-louds/: Cargo.toml
crates/nova-storage-louds/src/: delta.rs  fulltext.rs  lib.rs  prepared_shape.rs  ring.rs  store.rs
crates/nova-storage-memory/: Cargo.toml
crates/nova-storage-memory/src/: lib.rs
crates/nova-storage-ring/: Cargo.toml
crates/nova-storage-ring/src/: cltj.rs  cyclic.rs  facade.rs  fulltext.rs  huff_cp.rs  image.rs  lib.rs  louds.rs  mapped_hqwt.rs  mapped_qwt.rs  mapped_ring.rs  prepared_plan_cache.rs  product_path.rs  ring.rs  ring_nav.rs  ring_store.rs  scan.rs  snapshot.rs  store.rs
crates/nova-storage-ring/src/cyclic_ring/: facade.rs  image.rs  mapped_qwt.rs  mapped_ring.rs  mod.rs  scan.rs  store.rs
crates/nova-store/: Cargo.toml
crates/nova-store/src/: lib.rs
crates/server/nova-cli/: Cargo.toml
crates/server/nova-cli/src/: cli.rs  load.rs  main.rs
crates/server/nova-cli/tests/: cli.rs
crates/server/nova-mcp/: Cargo.toml
crates/server/nova-mcp/src/: lib.rs
crates/server/nova-server/: Cargo.toml
crates/server/nova-server/src/: lib.rs  service_description.rs
crates/server/nova-server/tests/: crash_recovery.rs  isolation.rs  reasoning_http.rs
crates/server/nova-store/: Cargo.toml
crates/server/nova-store/src/: lib.rs
docs/: ARCHITECTURE.md
docs/benchmarks/: README.md  RESULTS_DISK.md  RESULTS_MEM.md
research/: BRAIDED_RING.md  BRAIDED_RING_CLEANUP.md  ring-regression-card.md
tests/w3c/: Cargo.toml
tests/w3c/tests/: harness.rs
yasgui/: index.html
