[workspace]
resolver = "2"
members = [
    "crates/nova-core",
    "crates/nova-query",
    "crates/nova-storage-memory",
    "crates/nova-storage-common",
    "crates/nova-storage-ring",
    "crates/nova-fulltext",
    "crates/nova-reasoning",
    "crates/nova-shacl",
    "crates/nova-server",
    "crates/nova-store",
    "crates/nova-cli",
    "crates/nova-mcp",
    "crates/nova-python",
    "crates/nova-js",
    "tests/w3c",
    "benches",
]



[workspace.package]
version      = "0.1.0"
edition      = "2024"
license      = "MIT"
repository   = "https://github.com/jgentes/oxigraph-nova"

[workspace.dependencies]
# ── RDF / SPARQL 1.2 stack ─────────────────────────────────────────────────
# spargebra 0.4 and sparesults 0.3 both hard-pin oxrdf =0.3.3, so the three
# versions must stay in lock-step.  The sparql-12 / rdf-12 features enable
# quoted-triple (RDF 1.2) support throughout the entire parsing stack.
oxrdf         = { version = "0.3.3",  features = ["rdf-12"] }
oxttl         = { version = "0.2.3",  features = ["rdf-12"] }
# rdf-12 feature must match oxrdf's — oxrdfxml's serializer match arms on
# TermRef are only exhaustive (compile-clean) when built with the same
# rdf-12 feature flag oxrdf itself is compiled with workspace-wide.
oxrdfxml      = { version = "0.2",    features = ["rdf-12"] } # RDF/XML parser — needed by the W3C harness for .rdf test fixtures
oxjsonld      = { version = "0.2.5",  features = ["rdf-12"] } # JSON-LD parser/serializer — pins oxrdf =0.3.3, composes directly
oxrdfio       = { version = "0.2.5",  features = ["rdf-12"] } # Unified RdfParser/RdfSerializer/RdfFormat facade over oxttl/oxrdfxml/oxjsonld

spargebra     = { version = "0.4.6",  features = ["sparql-12"] }
sparopt       = { version = "0.3.6",  features = ["sparql-12"] }  # SPARQL algebra optimizer (filter pushdown, join reordering)

sparesults    = { version = "0.3.3",  features = ["sparql-12"] }  # .srx / .srj / .tsv result I/O

oxsdatatypes  = { version = "0.2" }    # Correct XSD typed-value semantics; route evaluator comparison through this
oxiri         = { version = "0.2.11" } # RFC 3987 IRI parsing/resolution — already a transitive dep via oxrdf/oxttl/spargebra/oxjsonld/oxrdfxml

# ── Async runtime + HTTP ────────────────────────────────────────────────────
tokio        = { version = "1.52",  features = ["full"] }
tokio-stream = { version = "0.1" }
axum         = { version = "0.8",   features = ["json"] }
tower        = "0.5"
tower-http   = { version = "0.7",   features = ["cors", "trace"] }

# Outbound HTTP client used by SPARQL 1.1 Update LOAD and the SERVICE clause
# (crates/nova-query, gated behind its opt-in `http-client` feature).
# rustls-ring-native avoids a system OpenSSL dependency for portability.
oxhttp = { version = "0.3", features = ["rustls-ring-native"] }


# ── Serialization ───────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Error handling ──────────────────────────────────────────────────────────
anyhow    = "1"
thiserror = "2"    # 2.x: same #[error] / #[from] derive API, stricter trait bounds

# ── Logging ─────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Hashing ─────────────────────────────────────────────────────────────────
sha2  = "0.10"
sha1  = "0.10"
md-5  = "0.10"


# ── Regex ───────────────────────────────────────────────────────────────────
regex = "1"

# ── CLI argument parsing ─────────────────────────────────────────────────────
clap = { version = "4", features = ["derive"] }

# ── Python bindings (crates/nova-python) ────────────────────────────────────
pyo3 = "0.29"

# ── JS/WASM bindings (crates/nova-js) ───────────────────────────────────────
console_error_panic_hook = "0.1.7"
js-sys                    = "0.3.98"
wasm-bindgen              = "0.2.121"
wasm-bindgen-futures      = "0.4.71"


# ── UUID generation ──────────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4"] }

# ── Random number generation ─────────────────────────────────────────────────
rand = "0.10"   # SPARQL RAND() built-in

# ── Synchronization ─────────────────────────────────────────────────────────
# Faster Mutex/RwLock than std::sync (no poisoning, adaptive spinning). Used
# by production hot paths (RingStore, Solution BNODE cache, extension
# registry, fulltext writer, reasoning overlay, MemoryStore).
parking_lot = "0.12"

# ── Full-text search ────────────────────────────────────────────────────────
# Opt-in via nova-storage-ring's `fulltext` cargo feature (crates/nova-fulltext).
# Zero-cost when the feature is disabled: no crate in the default build graph
# depends on tantivy.
tantivy = "0.26"


# ── GeoSPARQL functions ─────────────────────────────────────────────────────
# Opt-in via nova-query's `geosparql` cargo feature. Pins the exact oxrdf
# version (=0.3.3) this workspace already uses, so no vendoring is needed.
# Exposes `GEOSPARQL_EXTENSION_FUNCTIONS`, a const array of 43
# `(NamedNodeRef, fn(&[Term]) -> Option<Term>)` pairs covering distance/area/
# length/centroid/convexHull/envelope, the sf:/eh:/rcc8: topological relation
# families, and WKT/GeoJSON literal conversion.
spargeo = "0.5.5"


# ── Testing utilities ───────────────────────────────────────────────────────
pretty_assertions = "1.4"

# spareval 0.2.6 pins the exact same oxrdf/spargebra/sparopt/sparesults
# versions as this workspace and compiles cleanly against them. It is used
# only by tests/w3c, as a differential-testing oracle cross-checking Nova's
# own evaluator against Oxigraph's independent nested-loop/hash-join
# evaluator on the same W3C test cases — not a dependency of any production
# crate, and not a replacement for Nova's own LFTJ-based evaluator.
spareval = { version = "0.2.6", features = ["sparql-12"] }

# `reasonable` is a mature, independently-implemented OWL 2 RL reasoner
# (datafrog-based). Used only as a differential-testing oracle by
# nova-reasoning's tests — cross-checking `LftjFixpointEngine`'s semi-naive
# LFTJ fixpoint output against an independent implementation of the same
# OWL 2 RL rules, never a dependency of any production crate. The `rdf-12`
# feature must be enabled here because this workspace's `oxrdf` is built
# with `rdf-12` on, which adds a `Term::Triple` variant that `reasonable`
# must have a (feature-gated) match arm for to compile against.
reasonable = { version = "0.4.4", features = ["rdf-12"] }


# ── MCP server (crates/nova-mcp, opt-in via nova-cli's `mcp` feature) ───────
# Official Rust MCP SDK. `server` + `transport-io` give us the stdio-based
# server transport (`rmcp::transport::stdio`) needed for the CLI's
# `oxigraph mcp serve` subcommand. `schemars`
# is pulled in transitively by rmcp's own `server` feature, but is also
# listed explicitly since nova-mcp derives `schemars::JsonSchema` on its own
# tool-parameter structs.
rmcp     = { version = "2.2.0", features = ["server", "transport-io"] }
schemars = { version = "1.2.1" }


[profile.release]

opt-level      = 3
lto            = "thin"
codegen-units  = 1       # maximise inlining + cross-crate optimisation (slower compile)

# Bench profile: same opts as release + debug symbols embedded in-binary for samply profiling.
# split-debuginfo = "off" keeps DWARF in the binary (not a .dSYM bundle), which samply resolves
# reliably on macOS.  debug = 1 adds line tables + function names; debug = 2 adds full type info.
# Remove or set debug = false to get the smallest stripped binary for production use.
[profile.bench]
inherits        = "release"
debug           = 1
split-debuginfo = "off"
