[package]
name        = "oxigraph-nova-bench"
description = "Criterion benchmarks: Ring+LFTJ vs MemoryStore on a synthetic Wikidata slice"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
publish      = false

[features]
default  = []
# Braided Ring pilot (cyclic QWT / NOVARNG1 / D2).
cyclic-ring-pilot = ["oxigraph-nova-storage-ring/cyclic-ring-pilot", "ring-huffman-cp", "dep:qwt"]
# DROP-branch matrices for e511 --full-campaign.
diagnostics = ["oxigraph-nova-storage-ring/diagnostics"]
# Huffman C_p (product default; enabled by cyclic-ring-pilot). Standalone A/B name.
ring-huffman-cp = ["oxigraph-nova-storage-ring/ring-huffman-cp"]


# ── Runtime deps (needed by both [[bench]] and [[example]] targets) ──────────

[dependencies]
oxigraph-nova-core           = { path = "../crates/nova-core" }
oxigraph-nova-query          = { path = "../crates/nova-query" }
oxigraph-nova-storage-memory = { path = "../crates/nova-storage-memory" }
oxigraph-nova-storage-ring   = { path = "../crates/nova-storage-ring", features = ["cyclic-ring-pilot", "ring-huffman-cp"] }
oxrdf                   = { workspace = true }
oxttl                   = { workspace = true }   # N-Triples parsing for optional BSBM file load
spargebra               = { workspace = true }
anyhow                  = { workspace = true }
serde                   = { workspace = true }
serde_json              = { workspace = true }
mimalloc = "0.1.52"
sparesults = { workspace = true }
# Optional direct qwt dependency for E5.9B research harnesses that compare
# QWT256/HQWT256 directly (hqwt_vs_qwt_fair, e59b_hqwt_feasibility,
# e59b_huffcolp_prototype). Version must match vendor/qwt/Cargo.toml so the
# root [patch.crates-io] actually applies (see nova-storage-ring/Cargo.toml).
qwt = { version = "0.5.0", optional = true }



# ── Benchmark harness ────────────────────────────────────────────────────────
[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

# ── Benchmark targets ────────────────────────────────────────────────────────
[[bench]]
name    = "wikidata_slice"
harness = false   # use criterion's harness, not libtest

# Large-scale BSBM-mirrored benchmark (validates sidecar optimization)
# N=50k entities, FAN_OUT=20 features/entity → 1.25M triples.
# Every entity's feature leaf node has degree=20 ≥ SIDECAR_THRESH=16 → sidecar fires.
# Run: cargo bench -p oxigraph-nova-bench -- large/
[[bench]]
name    = "bsbm_large"
harness = false

# ── Example: memory footprint estimator ─────────────────────────────────────
[[example]]
name = "memory_report"

# Phase 2: staged scan cost breakdown (A–E) vs LOUDS, RESULTS_MEM-shaped.
[[bin]]
name = "phase2_scan_cost"
path = "src/bin/phase2_scan_cost.rs"

# Phase J1: join execution census (2join/star/path/triangle + VEO matrix).
[[bin]]
name = "phase_j1_join_census"
path = "src/bin/phase_j1_join_census.rs"

# Phase J: path_2hop forced-order + triangle D2 reachability ladder.
[[bin]]
name = "phase_j_path_triangle_census"
path = "src/bin/phase_j_path_triangle_census.rs"

# Phase K0: decode vs LFTJ-leapfrog cost split for path_2hop.
[[bin]]
name = "phase_k0_decode_profile"
path = "src/bin/phase_k0_decode_profile.rs"

# E5.9B: fair HQWT256 vs QWT256 point-op + Ring-op re-benchmark.
[[bin]]
name = "hqwt_vs_qwt_fair"
path = "src/bin/hqwt_vs_qwt_fair.rs"
required-features = ["cyclic-ring-pilot"]

# E5.9B Phase 1: structural HQWT feasibility gate (ordered RDI / numeric RNV).
[[bin]]
name = "e59b_hqwt_feasibility"
path = "src/bin/e59b_hqwt_feasibility.rs"
required-features = ["cyclic-ring-pilot"]

# E5.9B Phase 1: Col::P RDI/RNV primitive-usage audit.
[[bin]]
name = "e59b_colp_usage_audit"
path = "src/bin/e59b_colp_usage_audit.rs"
required-features = ["cyclic-ring-pilot"]

# E5.9B Phase 2: HuffColP standalone prototype bytes/RDI/RNV benchmark.
[[bin]]
name = "e59b_huffcolp_prototype"
path = "src/bin/e59b_huffcolp_prototype.rs"
required-features = ["ring-huffman-cp"]

# E5.9B Phase 3: CyclicRing PredicateColumn::Huff C_p end-to-end gates.
[[bin]]
name = "e59b_huff_cp_ring_gate"
path = "src/bin/e59b_huff_cp_ring_gate.rs"
required-features = ["ring-huffman-cp"]

# Phase 0: Ring mem/CPU regression card (component breakdown + dual residency).
[[bin]]
name = "ring_regression_card"
path = "src/bin/ring_regression_card.rs"
required-features = ["cyclic-ring-pilot"]

# E5.11 fair LOUDS + D2 product gates (G1/G2/G3).
[[bin]]
name = "e511_ring_perf_profile"
path = "src/bin/e511_ring_perf_profile.rs"
required-features = ["cyclic-ring-pilot"]

# Phase 2A: path_2hop / triangle product-path audit (K10/K11 liveness).
[[bin]]
name = "phase_2a_path_triangle_audit"
path = "src/bin/phase_2a_path_triangle_audit.rs"
required-features = ["cyclic-ring-pilot"]