[package]
name        = "oxigraph-nova-bench"
description = "Criterion benchmarks: Ring+LFTJ vs MemoryStore on a synthetic Wikidata slice"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
publish      = false

[features]
default  = []
# Braided Ring (cyclic QWT / NOVARNG1 / D2).
cyclic-ring = ["oxigraph-nova-engine-ring/cyclic-ring", "ring-huffman-cp", "dep:qwt"]
# DROP-branch matrices for e511 --full-campaign.
diagnostics = ["oxigraph-nova-engine-ring/diagnostics"]
# Huffman C_p (product default; enabled by cyclic-ring). Standalone A/B name.
ring-huffman-cp = ["oxigraph-nova-engine-ring/ring-huffman-cp"]


# ── Runtime deps (needed by both [[bench]] and [[example]] targets) ──────────

[dependencies]
oxigraph-nova-core           = { path = "../crates/core/nova-core" }
oxigraph-nova-query          = { path = "../crates/core/nova-query" }
oxigraph-nova-engine-memory = { path = "../crates/engines/nova-engine-memory" }
oxigraph-nova-engine-ring   = { path = "../crates/engines/nova-engine-ring", features = ["cyclic-ring", "ring-huffman-cp"] }
oxrdf                   = { workspace = true }
oxttl                   = { workspace = true }   # N-Triples parsing for optional BSBM file load
spargebra               = { workspace = true }
anyhow                  = { workspace = true }
serde                   = { workspace = true }
serde_json              = { workspace = true }
mimalloc = "0.1.52"
sparesults = { workspace = true }
# Optional direct qwt dependency for E5.9B research harnesses that compare
# QWT256/HQWT256 directly (hqwt_vs_qwt_fair, e59b_hqwt_feasibility,
# e59b_huffcolp_prototype). Version must match vendor/qwt/Cargo.toml so the
# root [patch.crates-io] actually applies (see nova-engine-ring/Cargo.toml).
qwt = { version = "0.5.0", optional = true }



# ── Benchmark harness ────────────────────────────────────────────────────────
[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

# ── Benchmark targets ────────────────────────────────────────────────────────
[[bench]]
name    = "wikidata_slice"
harness = false   # use criterion's harness, not libtest

# Large-scale BSBM-mirrored benchmark (validates sidecar optimization)
# N=50k entities, FAN_OUT=20 features/entity → 1.25M triples.
# Every entity's feature leaf node has degree=20 ≥ SIDECAR_THRESH=16 → sidecar fires.
# Run: cargo bench -p oxigraph-nova-bench -- large/
[[bench]]
name    = "bsbm_large"
harness = false

# ── Example: memory footprint estimator ─────────────────────────────────────
[[example]]
name = "memory_report"
