[package]
name        = "oxigraph-nova-cli"
description = "Standalone offline CLI tooling for Oxigraph Nova (load / backup / serve)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
# Opt-in Tantivy full-text search, forwarded through to nova-server/
# nova-storage-ring's own `fulltext` feature.
fulltext = ["oxigraph-nova-server/fulltext", "oxigraph-nova-storage-ring/fulltext"]

[dependencies]
oxigraph-nova-core         = { path = "../nova-core" }
oxigraph-nova-storage-ring = { path = "../nova-storage-ring" }
oxigraph-nova-server       = { path = "../nova-server" }
oxrdf          = { workspace = true }
oxrdfio        = { workspace = true }
clap           = { workspace = true }
anyhow         = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
mimalloc = "0.1.52"

[[bin]]
name = "oxigraph"
path = "src/main.rs"
