[package]
name        = "oxigraph-nova-core"
description = "RDF 1.2 data model, QuadStore/TrieIterator traits, Dictionary, and error types for Oxigraph Nova"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
oxrdf        = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
sux          = { version = "0.14", features = ["epserde", "mmap"] } # BitFieldVec-based id2rank/rank2id permutation arrays (PFC dictionary)
value-traits = "0.2.0"  # SliceByValue::index_value for safe BitFieldVec reads
lru          = "0.18"   # TermId-keyed decode cache for compacted-tier terms (PFC dictionary)
epserde      = { version = "0.12.5", features = ["derive", "mmap", "std"] } # mmap residency for CompactedTier's Front-Coded buffer




