[package]
name        = "oxigraph-nova-fulltext"
description = "Tantivy-backed full-text search index for Oxigraph Nova (opt-in, incremental per compaction)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
parking_lot = { workspace = true }   # IndexWriter Mutex (no poison)
oxigraph-nova-core = { path = "../nova-core" }
tantivy             = { workspace = true }
anyhow              = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile          = "3"
