[package]
name        = "oxigraph-nova-fulltext"
description = "Tantivy-backed full-text search index for Oxigraph Nova (opt-in, incremental per compaction)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
oxigraph-nova-core = { path = "../nova-core" }
tantivy             = { workspace = true }
anyhow              = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }
parking_lot         = { workspace = true }


[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile          = "3"
